font size and padding fixing on mobile

--- a/app/assets/stylesheets/components/_c-breaker.scss
+++ b/app/assets/stylesheets/components/_c-breaker.scss
@@ -24,10 +24,11 @@
       margin: 0 auto;
       z-index: 1;
     }
-    @media (max-width: $break-medium) {
-      .content {
-        max-width: 90%;
-      }
+  }
+  @media (max-width: $break-medium) {
+    padding: $padding-base 0;
+    .content {
+      max-width: 90%;
     }
   }
 }
