--- a/app/assets/stylesheets/components/_c-footer.scss
+++ b/app/assets/stylesheets/components/_c-footer.scss
@@ -31,4 +31,7 @@
     line-height: 1.6;
     font-size: 0.75em;
   }
+  input {
+    background: transparent;
+  }
 }
