--- a/app/assets/stylesheets/components/_c-project-summary.scss
+++ b/app/assets/stylesheets/components/_c-project-summary.scss
@@ -3,7 +3,6 @@
     font-size: 1.8em;
     line-height: 1.5;
     flex-grow: 2;
-    padding-right: $padding-base;
   }
   &__photo {
     min-width: 365px;
@@ -11,5 +10,10 @@
     flex-grow: 1;
     background: url('http://d11sa1anfvm2xk.cloudfront.net/index/versions/campaigners/images/clean-water@2x.jpg');
     background-size: cover;
+  }
+  @media (max-width: $break-medium) {
+    &__summary {
+      font-size: 1.3em;
+    }
   }
 }
